--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 @charset "utf-8";
 
+* {
+  font-family: "Helvetica Neue", Arial, "Hiragino Sans", Meiryo, sans-serif;
+}
+
+html {
+  font-size: 100%;
+}
+
 h1 {
-  font-size: 16px;
+  font-size: 1rem;
+}
+
+h2, h3 {
+  font-size: 0.875rem;
 }
 
 a, p {
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 
 a {
@@ -65,6 +77,65 @@ main {
   .content {
     width: 100%;
   }
+}
+
+.flex {
+  display: flex;
+}
+
+.item {
+  width: 50%;
+}
+
+@media (max-width: 834px) {
+  .flex {
+    flex-direction: column;
+  }
+
+  .item {
+    width: 100%;
+  }
+}
+
+.item img {
+  width: 100%;
+}
+
+.text {
+  padding: 5%;
+}
+
+.text h1,
+.text h2 {
+  margin-top: 25px;
+  border-bottom: 1px solid black;
+  padding-bottom: 10px;
+}
+
+.text p,
+.ingredient-list,
+.step-list {
+  margin-top: 15px;
+}
+
+.ingredient-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.ingredient-list dt {
+  width: 85%;
+}
+
+.ingredient-list dd {
+  width: 15%;
+}
+
+.ingredient-list dt,
+.ingredient-list dd,
+.step-list li {
+  border-bottom: 1px dotted #ccc;
+  padding: 10px 0;
 }
 
 #link {
